--- a/page-2/stle.css
+++ b/page-2/stle.css
@@ -31,11 +31,17 @@ svg {
     width: 100%;
 }
 
-.thumbneil {
-    background-image: url("images/header-img.jpg");
-    background-repeat: no-repeat;
-    height: 196vh;
-    position: relative;
+.margin-main {
+    margin-top: -10em;
+}
+
+@media (min-width: 1200px) {
+
+    .h1,
+    h1 {
+        font-size: 5em;
+        color: #fff;
+    }
 }
 
 nav {
